--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-            <h1>Is Your Birthday Lucky</h1>
+      
+            <h1>Is Your Birthday Lucky 🎂</h1>
 
         <div class="container">
             <h3>Date of Birth:</h3>
@@ -20,6 +21,8 @@
             <button id="check-button">CHECK</button>
 
         </div>
+
+   
 
         <script type="text/javascript" src="index.js"></script>
     </body>
